# arxiv-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
scripts/: evaluation.py  test_server_local.py
